Refatorado classes e utilitarios